--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -158,7 +158,7 @@
           <div
             class="contact-form__holder{% if image == blank %} no-image{% endif %}"
             style="{{- image_variables | escape -}}"
-            id="{{- block.id -}}"
+            id="{{- section.key -}}-{{- block.id -}}"
           >
             {%- if image.url != blank -%}
               <div class="contact-form__image-wrapper">
@@ -179,7 +179,7 @@
             <div
               class="contact-form__content"
               style="{{- text_variables | escape -}}"
-              id="{{- block.id -}}"
+              id="{{- section.key -}}-{{- block.id -}}"
             >
               {%- if heading != blank -%}
                 <h2 class="contact-form__heading contact-form__heading--{{- heading_size -}}">{{- heading -}}</h2>
