--- a/snippets/script-full-height.liquid
+++ b/snippets/script-full-height.liquid
@@ -1,6 +1,14 @@
 <script>
-  const parent = document.querySelector('#main');
-  const sections = [...parent.children];
+  const sectionFullHeight = () => {
+    const parent = document.querySelector('#main');
+    const sections = [...parent.children];
 
-  if (sections.length <= 1) parent.classList.add('stretch');
+    if (sections.length <= 1) parent.classList.add('stretch');
+  };
+
+  sectionFullHeight()
+
+  document.addEventListener("preview:ready", () => {
+    sectionFullHeight()
+  })
 </script>
