--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -141,7 +141,7 @@
       {
         "type": "select",
         "id": "rounded_corners",
-        "label": "Rounded corners of image",
+        "label": "Rounded corners of background",
         "options": [
           {
             "value": "none",
@@ -165,7 +165,7 @@
       {
         "type": "checkbox",
         "id": "full_width",
-        "label": "Full-width image",
+        "label": "Full-width background",
         "default": true
       },
       {
